# Codepiglet

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  hooks.json  quotes.example.json
docs/: architecture.md  branches.md  code-management.md  git-branch-bubble.md  hook-upgrade-phases.md  hook-upgrade.md  hooks-to-pet-states.md  interaction-layer-architecture.md  mood-idle-explained.md  naming-codepet-and-nixie.md  pet-states.md  plan-pet-claude-windsurf-vscode.md  task-duration-celebration.md
nixie-extension/: package-lock.json  package.json
nixie-extension/src/: extension.ts
nixie-hook/: Cargo.toml
nixie-hook/src/: main.rs
nixie-pet/: Cargo.toml
nixie-pet/assets/fonts/: README.md
nixie-pet/assets/icon/: AppIcon.icns  build_macos_icon.py
nixie-pet/packaging/macos/: Info.plist
nixie-pet/src/: corgi.html  corgi.rs  cursor_state.rs  git_reader.rs  hook_state.rs  main.rs  native_pulse.rs  nyanpig-body.html  nyanpig-head.html  nyanpig-i18n.js  nyanpig.css  nyanpig.html  nyanpig.js  nyanpig.rs  pet_core.rs  pet_overlay.rs  pet_pointer.rs  pet_settings.rs  pet_socket_macos.rs  process_monitor.rs  quotes.rs  state.rs  window_prefs.rs
nixie-pet/src/archive/: corgi.html
scripts/: bundle-nixie-macos-app.sh  install-hooks.sh  simulate_pet_states.py  test-states.sh  test-states.sh.disabled
