[package]
name = "nixie-pet"
version = "0.3.0"
edition = "2021"
description = "A desktop corgi pet that reacts to your Cursor IDE state"

[dependencies]
wry = { version = "0.48", features = ["transparent"] }
tao = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
